# hadoom

./: .gitignore  Diagrams.hs  FRP.hs  Geometry.hs  Hadoom.hs  Light.hs  Material.hs  Physics.hs  Sector.hs  Shader.hs  default.nix  devlog.org  hadoom.cabal  shell.nix
editor/: DiagramsGtk.hs  Main.hs  editor.glade
editor/Hadoom/: Editor.hs
editor/Hadoom/Editor/: Render.hs  SectorBuilder.hs
editor/Reactive/Banana/: GTK.hs
hadoom/: Camera.hs  Diagrams.hs  FRP.hs  Geometry.hs  Hadoom.hs  Level.hs  Light.hs  Material.hs  Physics.hs  Sector.hs  Shader.hs  TestWorld.hs  Util.hs
hadoom-editor/: Main.hs  editor.glade
hadoom-editor/Hadoom/: Editor.hs
hadoom-editor/Hadoom/Editor/: GUI.hs  Render.hs  SectorBuilder.hs  Util.hs
hadoom-editor/Hadoom/Editor/Mode/: CreateSector.hs  Default.hs  Default.hs-boot  MoveSector.hs  MoveVertex.hs
hadoom-editor/Reactive/Banana/: GTK.hs
hadoom/Control/Wire/: Profunctor.hs
hadoom/Data/: TList.hs
hadoom/Hadoom/: BSP.hs  Camera.hs  GLWorld.hs  Geometry.hs  World.hs  WorldBSP.hs
hadoom/Hadoom/GL/: Vertex.hs  World.hs
hadoom/Quine/: Debug.hs
shaders/fragment/: depth.glsl  gauss.glsl  sat.glsl  solid-white.glsl  subtract-mean.glsl
shaders/vertex/: gauss-horiz.glsl  gauss-vert.glsl  projection-model.glsl  sat.glsl  shadow.glsl
