name:                hadoom
version:             0.1.0.0
synopsis:            A 2.5D game engine
homepage:            http://github.com/ocharles/hadoom
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
category:            Game
build-type:          Simple
cabal-version:       >=1.10

Data-Files:
  shaders/fragment/*.glsl
  shaders/vertex/*.glsl

executable hadoom
  main-is:             Hadoom.hs
  build-depends:
    base >=4.7 && <4.8,
    containers,
    diagrams,
    diagrams-gtk,
    diagrams-lib,
    distributive,
    JuicyPixels,
    lens,
    linear,
    OpenGL >= 2.9.2.0 && < 2.10,
    OpenGLRaw >= 1.5 && < 1.6,
    profunctors,
    sdl2 >= 1.1.0 && < 1.2,
    text >= 1.1.1.3 && < 1.2,
    time,
    transformers,
    vector,

    mtl, gtk, diagrams-cairo
  default-language:    Haskell2010
  ghc-options: -Wall -rtsopts -O2

executable hadoom-editor
  hs-source-dirs: editor
  main-is: Main.hs
  build-depends:
    base >=4.7 && <4.8,
    containers,
    diagrams,
    diagrams-gtk,
    diagrams-lib,
    distributive,
    JuicyPixels,
    lens,
    linear,
    OpenGL >= 2.9.2.0 && < 2.10,
    OpenGLRaw >= 1.5 && < 1.6,
    profunctors,
    reactive-banana,
    sdl2 >= 1.1.0 && < 1.2,
    text >= 1.1.1.3 && < 1.2,
    time,
    transformers,
    vector,
    time,

    mtl, gtk, diagrams-cairo
  default-language:    Haskell2010
  ghc-options: -Wall -rtsopts -O2
