name:                hadoom
version:             0.1.0.0
synopsis:            A 2.5D game engine
homepage:            http://github.com/ocharles/hadoom
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
category:            Game
build-type:          Simple
cabal-version:       >=1.10

Data-Files:
  shaders/fragment/*.glsl
  shaders/vertex/*.glsl

Library
  hs-source-dirs: hadoom
  build-depends:
                    JuicyPixels
                , base >=4.7 && <4.8
                , base-prelude
                , bytestring >= 0.10.4.0
                , containers
                , diagrams
                , diagrams-lib
                , distributive
                , gl
                , lens
                , linear
                , monad-loops
                , mtl
                , netwire
                , profunctors
                , sdl2 >= 2.0.0 && < 2.1
                , text >= 1.1.1.3 && < 1.3
                , time
                , transformers
                , vector
  default-extensions:
    NoImplicitPrelude
  exposed-modules:
    Control.Wire.Profunctor
    Data.TList
    Hadoom
    Hadoom.Camera
    Hadoom.GL.Vertex
    Hadoom.GL.World
    Hadoom.Geometry
    Hadoom.World
    Light
    Material
    Physics
    TestWorld
    Quine.Debug
    Shader
    Util
  other-modules:
    Paths_hadoom
  default-language:    Haskell2010
  ghc-options: -Wall -rtsopts -O2

executable hadoom
  main-is: Main.hs
  build-depends:

                  JuicyPixels
                , base >=4.7 && <4.8
                , bytestring >= 0.10.4.0
                , containers
                , distributive
                , hadoom
                , lens
                , linear
                , mtl
                , profunctors
                , sdl2 >= 2.0.0 && < 2.1
                , text >= 1.1.1.3 && < 1.3
                , time
                , transformers
                , vector
  default-language:    Haskell2010
  ghc-options: -Wall -rtsopts -O2

executable hadoom-editor
  hs-source-dirs: editor
  main-is: Main.hs
  build-depends:

                  JuicyPixels
                , base >=4.7 && <4.8
                , bytestring >= 0.10.4.0
                , cairo
                , containers
                , diagrams
                , diagrams-cairo
                , diagrams-lib
                , distributive
                , gtk3
                , hadoom
                , lens
                , linear
                , mtl
                , profunctors
                , reactive-banana
                , sdl2 >= 2.0.0 && < 2.1
                , text >= 1.1.1.3 && < 1.3
                , time
                , time
                , transformers
                , vector
  default-language:    Haskell2010
  ghc-options: -Wall -rtsopts -O2
